samples/_failures_safe/1761624369_0665ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_95b535fa.c: In function ‘main’:
./samples/SAFE/__tmp_95b535fa.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
